check mmp results in detail

--- a/adme_dataset_explore.ipynb
+++ b/adme_dataset_explore.ipynb
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "a3e46f09",
    "metadata": {},
    "outputs": [
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "25222a2f",
    "metadata": {},
    "outputs": [],
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "6037826a",
    "metadata": {},
    "outputs": [
@@ -1760,7 +1760,7 @@
        "19              [#0;X1;H0;+0;!R:1].[#0;X1;H0;+0;!R:2]  1.637630  2.258920  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3102,6 +3102,129 @@
    ],
    "source": [
     "dfs['environment_fingerprint']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d4f814cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pair_id</th>\n",
+       "      <th>constant_id</th>\n",
+       "      <th>constant_smiles</th>\n",
+       "      <th>compound1_id</th>\n",
+       "      <th>compound1_smiles</th>\n",
+       "      <th>compound2_id</th>\n",
+       "      <th>compound2_smiles</th>\n",
+       "      <th>rule_environment_id</th>\n",
+       "      <th>rule_id</th>\n",
+       "      <th>environment_fingerprint_id</th>\n",
+       "      <th>radius</th>\n",
+       "      <th>num_pairs</th>\n",
+       "      <th>environment_fingerprint_smarts</th>\n",
+       "      <th>environment_fingerprint_parent_smarts</th>\n",
+       "      <th>value_c1</th>\n",
+       "      <th>value_c2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[*:1]/C=C/C(=O)N1CCC(C(=O)NCc2ccc(F)cc2)CC1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>O=C(NCc1ccc(F)cc1)C1CCN(C(=O)/C=C/c2ccc(F)cc2)CC1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>O=C(NCc1ccc(F)cc1)C1CCN(C(=O)/C=C/c2ccccc2)CC1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[#0;X1;H0;+0;!R:1]</td>\n",
+       "      <td></td>\n",
+       "      <td>0.675687</td>\n",
+       "      <td>0.675687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18588</th>\n",
+       "      <td>18589</td>\n",
+       "      <td>1389</td>\n",
+       "      <td>[*:1]S(=O)(=O)N1CCC[C@H](C(=O)Nc2cccc3ncccc23)C1</td>\n",
+       "      <td>1245</td>\n",
+       "      <td>O=C(Nc1cccc2ncccc12)[C@H]1CCCN(S(=O)(=O)c2ccc(...</td>\n",
+       "      <td>1246</td>\n",
+       "      <td>O=C(Nc1cccc2ncccc12)[C@H]1CCCN(S(=O)(=O)c2cccc...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[#0;X1;H0;+0;!R:1]</td>\n",
+       "      <td></td>\n",
+       "      <td>1.547110</td>\n",
+       "      <td>1.578983</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       pair_id  constant_id                                   constant_smiles  \\\n",
+       "0            1            1       [*:1]/C=C/C(=O)N1CCC(C(=O)NCc2ccc(F)cc2)CC1   \n",
+       "18588    18589         1389  [*:1]S(=O)(=O)N1CCC[C@H](C(=O)Nc2cccc3ncccc23)C1   \n",
+       "\n",
+       "       compound1_id                                   compound1_smiles  \\\n",
+       "0                 1  O=C(NCc1ccc(F)cc1)C1CCN(C(=O)/C=C/c2ccc(F)cc2)CC1   \n",
+       "18588          1245  O=C(Nc1cccc2ncccc12)[C@H]1CCCN(S(=O)(=O)c2ccc(...   \n",
+       "\n",
+       "       compound2_id                                   compound2_smiles  \\\n",
+       "0                 2     O=C(NCc1ccc(F)cc1)C1CCN(C(=O)/C=C/c2ccccc2)CC1   \n",
+       "18588          1246  O=C(Nc1cccc2ncccc12)[C@H]1CCCN(S(=O)(=O)c2cccc...   \n",
+       "\n",
+       "       rule_environment_id  rule_id  environment_fingerprint_id  radius  \\\n",
+       "0                        1        1                           1       0   \n",
+       "18588                    1        1                           1       0   \n",
+       "\n",
+       "       num_pairs environment_fingerprint_smarts  \\\n",
+       "0              2             [#0;X1;H0;+0;!R:1]   \n",
+       "18588          2             [#0;X1;H0;+0;!R:1]   \n",
+       "\n",
+       "      environment_fingerprint_parent_smarts  value_c1  value_c2  \n",
+       "0                                            0.675687  0.675687  \n",
+       "18588                                        1.547110  1.578983  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_pair_props[df_pair_props.rule_environment_id ==1]"
    ]
   },
   {
