reorganize to check pairs

--- a/hitdexter3_data_explore.ipynb
+++ b/hitdexter3_data_explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "92a67440",
    "metadata": {},
    "outputs": [],
@@ -39207,6 +39207,14 @@
    "metadata": {},
    "source": [
     "## can read file from here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2233faae",
+   "metadata": {},
+   "source": [
+    "2025-10-30 revsion from here in new notebook: hitdexter3_data_mmp.ipynb"
    ]
   },
   {
